# clubs-diamonds

./: .gitignore  Cargo.toml  README.md  add_sub_output  cas_notes  notes
assets/: make-small.sh
src/: demo.rs  expression.rs  expression_writer.rs  lib.rs  searcher.rs  ui.rs  utils.rs
src/search/: expression.rs  expression_writer.rs  mod.rs  number.rs  pivot.rs  searcher.rs  verdict.rs  writer.rs
src/search/expression/: display.rs  fromstr.rs  mod.rs  revar.rs
src/search/flat/: expression.rs  expression_writer.rs  mod.rs  pivot.rs
src/search/flat/ui/: mod.rs
src/search/writer/: calset.rs  children.rs  mod.rs  partition.rs
src/search/writer/writers/: add_writer.rs  and_writer.rs  atom_writer.rs  const_writer.rs  mod.rs  mul_writer.rs  neg_writer.rs  or_writer.rs  shift_writer.rs  var_writer.rs  xor_writer.rs
src/ui/: default_ui.rs  mod.rs  null_ui.rs
src/utils/: mod.rs
