[package]
name = "clubs-diamonds"
version = "0.1.6"
edition = "2024"
license-file = "LICENSE"
description = "A brute-forcer for finding short mathematical expressions in Rust, for code golf"
repository = "https://github.com/acotis/clubs-diamonds"
readme = "README.md"
keywords = ["code-golf", "brute-forcer"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "demo-2"
path = "src/bin/demo_2.rs"

[dependencies]
chrono = "0.4.42"
crossterm = "0.29.0"
embed-doc-image = "0.1.4"
lazy_static = "1.5.0"
meansd = "2.1.0"
num-traits = "0.2.19"
ratatui = "0.29.0"
single-statistics = "0.5.0"

[profile.release]
lto = "fat"
