[package]
name = "clubs-diamonds"
version = "0.1.16"
edition = "2024"
license-file = "LICENSE"
description = "A brute-forcer for finding short mathematical expressions in Rust, for code golf"
repository = "https://github.com/acotis/clubs-diamonds"
readme = "README.md"
keywords = ["code-golf", "brute-forcer"]

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "two"
path = "src/bin/two.rs"

[[bin]]
name = "penalizer"
path = "src/bin/penalizer.rs"

[[bin]]
name = "inspector"
path = "src/bin/inspector.rs"

[[bin]]
name = "closure"
path = "src/bin/closure.rs"

[[bin]]
name = "option-verdict"
path = "src/bin/option_verdict.rs"

[[bin]]
name = "vec-verdict"
path = "src/bin/vec_verdict.rs"

[dependencies]
chrono = "0.4.42"
crossterm = "0.29.0"
embed-doc-image = "0.1.4"
lazy_static = "1.5.0"
meansd = "2.1.0"
num-traits = "0.2.19"
ratatui = "0.29.0"
single-statistics = "0.5.0"

[profile.release]
lto = "fat"
